THRIFT-162 Thrift structures are unhashable, preventing them from being used as set elements Client: Python Patch: David Reiss, Nobuaki Sukegawa

This closes #714